// 根项目配置 - 多模块项目
plugins {
	id 'architectury-plugin' version '3.4-SNAPSHOT'
	id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
}

architectury {
	minecraft = '1.21.11'
}

allprojects {
	apply plugin: 'java'
	apply plugin: 'architectury-plugin'
	
	group = maven_group
	version = '1.0.0-1.21.11'
	
	repositories {
		maven { url = 'https://maven.architectury.dev/' }
		maven { url = 'https://maven.fabricmc.net/' }
		maven { url = 'https://maven.minecraftforge.net/' }
		maven { url = 'https://maven.shedaniel.me/' }
		maven { url = 'https://maven.terraformersmc.com/' }
		// Cardinal Components API (Touhou Little Maid Fabric 移植版依赖)
		maven { url = 'https://maven.ladysnake.org/releases' }
        // curseforge与modrinth平台仓库
        exclusiveContent {
            forRepository {
                maven {
                    name = 'CurseMaven'
                    url = 'https://cursemaven.com'
                }
            }
            filter {
                includeGroup 'curse.maven'
            }
        }
        exclusiveContent {
            forRepository {
                maven {
                    name = 'Modrinth'
                    url = 'https://api.modrinth.com/maven'
                }
            }
            filter {
                includeGroup 'maven.modrinth'
            }
        }
		mavenCentral()
	}
	
	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.release = 21
	}
	
	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
		withSourcesJar()
	}
	
	// 关键：Gradle toolchain 默认只影响编译任务；runClient/Transformer 属于 JavaExec，
	// 若系统默认 JDK 为 21 可能触发 Architectury Transformer 的已知崩溃。
	// 这里强制所有 JavaExec 使用 Java 17 launcher，保证开发运行环境一致。
	tasks.withType(JavaExec).configureEach {
		javaLauncher = javaToolchains.launcherFor {
			languageVersion = JavaLanguageVersion.of(21)
		}
		// 设置运行游戏时的玩家名称
		systemProperty 'minecraft.username', rootProject.properties.getOrDefault('minecraft_username', 'Player')
	}
}

subprojects {
	apply plugin: 'dev.architectury.loom'
	
	base {
		archivesName = "mmdskin-${project.name}"
	}
	
	loom {
		silentMojangMappingsLicense()
	}
	
	dependencies {
		minecraft "com.mojang:minecraft:1.21.11"
		mappings loom.officialMojangMappings()
//		mappings {
//			officialMojangMappings()
//			parchment("org.parchmentmc.data:parchment-1.21.11:2025.12.20@zip")
//		}
	}
	
	// 配置runClient任务，设置固定的玩家名称（仅 Fabric）
	if (project.name == 'fabric') {
		tasks.named('runClient', JavaExec).configure {
			def username = rootProject.properties.getOrDefault('minecraft_username', 'Player')
			args '--username', username
		}
	}
}